6.18.1 (27-08-2020)
- Refactor: Registration history report service API cleanup

6.18.0 (25-08-2020)
- Refactor: Moved CGD related classes to CGD module

6.17.1 (22-08-2020)
- Improvement: First name exported to moodle includes all names except last 

6.17.0 (11-08-2020)
- Improvement: Added column to registration history report, regarding previous reingressions including precedent registrations
- Refactor: Updated dependencies

6.16.1 (03-08-2020)
- Improvement: Update label for spent email when a request is concluded

6.16.0 (29-07-2020)
- Refactor: Moved relation PersonCountryHighSchool from specification to academic-core

6.15.1 (30-06-2020)
- Improvement: Updated permission service

6.15.0 (26-06-2020)
- Improvement: Update blueRecord forms filled algorithm. blue record redirector has a bottleneck for students to login.
- Bug fix: Manage previous degree information screen didn't show information in the right format (missing conversion LocalizedString to String)
- Bug fix: Filter repeated possible shifts to enrol if multiple capacities defined

6.14.0 (08-05-2020)
- Refactor: Moved HelpDesk to fenixedu-base
- Refactor: Moved UsernameSequenceGenerator to fenixedu-base

6.13.1 (06-05-2020)
- Bug fix: Export to moodle: escape quotes of courses names; allow export to csv / excel

6.13.0 (05-05-2020)
- Refactor: Moved authenticationRedirector to academic core

6.12.0 (28-04-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (Shifts capacity by type)

6.11.1 (25-04-2020)
- Refactor: Replace fenixedu-academic-treasury dependency by fenixedu-academic-treasury-base and fenixedu-academic-treasury-ui

6.11.0 (04-04-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core and academic-extensions
- Refactor: Moved specific organizational Units subclasses from academic-core 

6.10.3 (03-04-2020)
- New feature: adding Media menu

6.10.2 (31-03-2020)
- Bug fix: Announcements menu is now consistent in Create/Edit

6.10.1 (28-03-2020)