@@ -1,3 +1,5 @@
+- Refactor: Refactored the isSharingDataWithCGDAnswered in PersonUlisboaSpecifications to use the DataShareAuthorization
+
 6.18.1 (27-08-2020)
 - Refactor: Registration history report service API cleanup
 
